--- a/css/styles.css
+++ b/css/styles.css
@@ -485,8 +485,7 @@ transform: translateY(0);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-label {
-    display: block;
+.subscribe-text {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -496,7 +495,6 @@ transform: translateY(0);
 }
 
 .subscribe-input {
-    margin-right: 24px;
     border: 1px solid #fff;
     border-radius: 4px;
     width: 264px;
@@ -549,6 +547,7 @@ transform: translateY(0);
 
 .input-wrapper {
     display: flex;
+    gap: 24px;
 }
 
 .backdrop {
