--- a/css/styles.css
+++ b/css/styles.css
@@ -551,9 +551,10 @@ transform: translateY(0);
     margin-left: 16px;
 }
 
-.input-wrapper {
+.subscribe-wrapper {
     display: flex;
     gap: 24px;
+    flex-direction: row;
 }
 
 .backdrop {
@@ -591,23 +592,28 @@ transform: translate(-50%, -50%) scale(1.5);
     border-radius: 4px;
     transform: translate(-50%, -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
 }
 
 .close-btn {
     display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
     position: absolute;
+    width: 24px;
+    height: 24px;
     top: 24px;
     right: 24px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #e7e9fc;
-    padding: 8px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn:hover, .close-btn:focus {
-    border: 1px solid #404bbf;
+    border: none;
     background-color: #404bbf;
 }
 
@@ -628,19 +634,19 @@ transform: translate(-50%, -50%) scale(1.5);
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    padding-top: 70px;
     margin-bottom: 16px;
 }
 
 .input-wrapper {
     display: flex;
     flex-direction: column;
-    padding: 0 24px;
+    padding: 0;
+    margin-bottom: 8px;
 }
 
 .username-label {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
@@ -648,7 +654,6 @@ transform: translate(-50%, -50%) scale(1.5);
 
 .username-wrapper {
     position: relative;
-    margin-bottom: 8px;
 }
 
 .username-icon {
@@ -660,7 +665,7 @@ transform: translate(-50%, -50%) scale(1.5);
 .username-input {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     height: 40px;
     padding-left: 38px;
 }
@@ -682,14 +687,14 @@ transform: translate(-50%, -50%) scale(1.5);
 .phone-input {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     height: 40px;
     padding-left: 38px;
 }
 
 .email-label {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
@@ -704,7 +709,7 @@ transform: translate(-50%, -50%) scale(1.5);
 .email-input {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     height: 40px;
     padding-left: 38px;
 }
@@ -712,7 +717,7 @@ transform: translate(-50%, -50%) scale(1.5);
 .form-comment {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     min-height: 120px;
     padding: 8px 16px;
     resize: none;
@@ -725,7 +730,7 @@ transform: translate(-50%, -50%) scale(1.5);
 
 .textarea-label {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
@@ -753,7 +758,6 @@ transform: translate(-50%, -50%) scale(1.5);
 }
 
 .checkbox-wrapper {
-    padding-left: 24px;
     margin-bottom: 24px;
 }
 
@@ -776,8 +780,7 @@ transform: translate(-50%, -50%) scale(1.5);
 }
 
 .form-btn-wrapper {
-    padding-bottom: 26px;
-    padding-left: 120px;
+    margin: 0 auto;
 }
 
 .agree-checkbox {
