--- a/css/styles.css
+++ b/css/styles.css
@@ -658,8 +658,10 @@ transform: translate(-50%, -50%) scale(1.5);
 
 .username-icon {
     position: absolute;
-    top: 11px;
+    top: 50%;
     left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .username-input {
@@ -668,6 +670,17 @@ transform: translate(-50%, -50%) scale(1.5);
     width: 100%;
     height: 40px;
     padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.username-input:focus {
+    border-color: #4D5AE5;
+}
+
+.username-input:focus+.username-icon {
+    fill: #4D5AE5;
 }
 
 .phone-label {
@@ -680,8 +693,10 @@ transform: translate(-50%, -50%) scale(1.5);
 
 .phone-icon {
     position: absolute;
-    top: 8px;
+    top: 50%;
     left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .phone-input {
@@ -690,6 +705,17 @@ transform: translate(-50%, -50%) scale(1.5);
     width: 100%;
     height: 40px;
     padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.phone-input:focus {
+    border-color: #4D5AE5;
+}
+
+.phone-input:focus+.phone-icon {
+    fill: #4D5AE5;
 }
 
 .email-label {
@@ -702,8 +728,10 @@ transform: translate(-50%, -50%) scale(1.5);
 
 .email-icon {
     position: absolute;
-    top: 8px;
+    top: 50%;
     left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .email-input {
@@ -712,6 +740,17 @@ transform: translate(-50%, -50%) scale(1.5);
     width: 100%;
     height: 40px;
     padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.email-input:focus {
+    border-color: #4D5AE5;
+}
+
+.email-input:focus+.email-icon {
+    fill: #4D5AE5;
 }
 
 .form-comment {
@@ -724,8 +763,16 @@ transform: translate(-50%, -50%) scale(1.5);
     margin-bottom: 14px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment:focus {
+    border-color: #4D5AE5;
 }
 
 .textarea-label {
