--- a/css/styles.css
+++ b/css/styles.css
@@ -644,6 +644,10 @@ transform: translate(-50%, -50%) scale(1.5);
     margin-bottom: 8px;
 }
 
+.input-wrapper(:last-child) {
+    margin-bottom: 16px;
+}
+
 .username-label {
     font-size: 12px;
     line-height: 1.17;
@@ -685,7 +689,7 @@ transform: translate(-50%, -50%) scale(1.5);
 
 .phone-label {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
@@ -786,14 +790,14 @@ transform: translate(-50%, -50%) scale(1.5);
 .form-comment::placeholder {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
 }
 
 .checkbox-text {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
@@ -809,10 +813,13 @@ transform: translate(-50%, -50%) scale(1.5);
 }
 
 .form-btn {
+    font-family: "Roboto", sans-serif;
+    display: block;
     cursor: pointer;
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    margin: 0 auto;
+    min-width: 169px;
     height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #4d5ae5;
@@ -821,16 +828,12 @@ transform: translate(-50%, -50%) scale(1.5);
     line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: center;
-    color: #fff;
+    color: #ffffff;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-btn-wrapper {
-    margin: 0 auto;
-}
-
-.agree-checkbox {
+.visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -850,10 +853,12 @@ transform: translate(-50%, -50%) scale(1.5);
     align-items: center;
     width: 16px;
     height: 16px;
-    background-color: #ffffff;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: #ffffff;
     margin-right: 8px;
+    fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .blank-check {
@@ -862,6 +867,8 @@ fill: #ffffff;
 
 .agree-checkbox:checked+.checkbox-text>.check {
     background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
 }
 
 .form-btn:hover {
