--- a/css/styles.css
+++ b/css/styles.css
@@ -467,14 +467,14 @@ box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     top: 0;
     right: 0;
     width: 100%;
-        height: 100%;
-        background-color: #4d5ae5;
+    height: 100%;
+    background-color: #4d5ae5;
     line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-        padding: 40px 32px;
-        transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .thumb-text {
@@ -531,7 +531,7 @@ transform: translateY(0);
     
 .subscribe-btn:hover,
 .subscribe-btn:focus {
-        background-color: #404bbf;
+    background-color: #404bbf;
     }
 
 .subscribe-input::placeholder {
@@ -642,10 +642,6 @@ transform: translate(-50%, -50%) scale(1.5);
     flex-direction: column;
     padding: 0;
     margin-bottom: 8px;
-}
-
-.input-wrapper(:last-child) {
-    margin-bottom: 16px;
 }
 
 .username-label {
@@ -764,7 +760,6 @@ transform: translate(-50%, -50%) scale(1.5);
     min-height: 120px;
     padding: 8px 16px;
     resize: none;
-    margin-bottom: 14px;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -785,6 +780,12 @@ transform: translate(-50%, -50%) scale(1.5);
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
+}
+
+.textarea-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
 }
 
 .form-comment::placeholder {
@@ -865,7 +866,7 @@ transform: translate(-50%, -50%) scale(1.5);
 fill: #ffffff;
 }
 
-.agree-checkbox:checked+.checkbox-text>.check {
+.visually-hidden:checked+.checkbox-text>.check {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
